# OOHaskell-encodings

./: OOHaskell-encodings.cabal  README.md  shell.nix
src/: ExistQuant.hs  Heterogeneous.hs  ObjectDataToTailPolymorphic.hs  SubtypeToAlgebraic.hs  SubtypesAsRecordTypesWithOverloading.hs  TailPolymorphicFuncObjects.hs  TailPolymorphicMutObjects.hs
